test/negative/209_call_non_function.fx
// expect: int ->
val x = 5
val y = x(3)
println(y)
