test/negative/209_call_non_function.err
209_call_non_function.fx:3:9: error: incorrect type of value 'x': expected='(int -> <unknown>)', actual='int'
 3 | val y = x(3)
   |         ^

1 errors occured during type checking.
